--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
-</head>
-<body>
-	<h1>Hello World</h1>
-</body>
+
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<link rel="stylesheet" href="styles.css">
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+		 crossorigin="anonymous"></script>
+		<script src="main.js"></script>
+		<title>TODO</title>
+	</head>
+
+	<body>
+		<header>
+			<h1>todo
+				<span>list</span>
+			</h1>
+			<h2>a simple todo app build with node</h2>
+		</header>
+		<input type="text" name="entry" id="todoInput" placeholder="enter yout todo entry">
+		<ul class="list"></ul>
+	</body>
+
 </html>
